crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__attribute__multiple_dots.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/attribute/multiple_dots.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            23,
        ),
        range: 0..46,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        6,
                    ),
                    range: 0..10,
                    value: Attribute(
                        ExprAttribute {
                            node_index: NodeIndex(
                                5,
                            ),
                            range: 0..10,
                            value: Attribute(
                                ExprAttribute {
                                    node_index: NodeIndex(
                                        3,
                                    ),
                                    range: 0..6,
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(
                                                1,
                                            ),
                                            range: 0..5,
                                            id: Name("extra"),
                                            ctx: Load,
                                        },
                                    ),
                                    attr: Identifier {
                                        id: Name(""),
                                        range: 6..6,
                                        node_index: NodeIndex(
                                            2,
                                        ),
                                    },
                                    ctx: Load,
                                },
                            ),
                            attr: Identifier {
                                id: Name("dot"),
                                range: 7..10,
                                node_index: NodeIndex(
                                    4,
                                ),
                            },
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        9,
                    ),
                    range: 11..19,
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(
                                8,
                            ),
                            range: 11..19,
                            id: Name("multiple"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        13,
                    ),
                    range: 19..27,
                    value: Attribute(
                        ExprAttribute {
                            node_index: NodeIndex(
                                12,
                            ),
                            range: 19..27,
                            value: EllipsisLiteral(
                                ExprEllipsisLiteral {
                                    node_index: NodeIndex(
                                        10,
                                    ),
                                    range: 19..22,
                                },
                            ),
                            attr: Identifier {
                                id: Name("dots"),
                                range: 23..27,
                                node_index: NodeIndex(
                                    11,
                                ),
                            },
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        16,
                    ),
                    range: 28..36,
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(
                                15,
                            ),
                            range: 28..36,
                            id: Name("multiple"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        22,
                    ),
                    range: 36..45,
                    value: Attribute(
                        ExprAttribute {
                            node_index: NodeIndex(
                                21,
                            ),
                            range: 36..45,
                            value: Attribute(
                                ExprAttribute {
                                    node_index: NodeIndex(
                                        19,
                                    ),
                                    range: 36..40,
                                    value: EllipsisLiteral(
                                        ExprEllipsisLiteral {
                                            node_index: NodeIndex(
                                                17,
                                            ),
                                            range: 36..39,
                                        },
                                    ),
                                    attr: Identifier {
                                        id: Name(""),
                                        range: 40..40,
                                        node_index: NodeIndex(
                                            18,
                                        ),
                                    },
                                    ctx: Load,
                                },
                            ),
                            attr: Identifier {
                                id: Name("dots"),
                                range: 41..45,
                                node_index: NodeIndex(
                                    20,
                                ),
                            },
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | extra..dot
  |       ^ Syntax Error: Expected an identifier
2 | multiple....dots
3 | multiple.....dots
  |


  |
1 | extra..dot
2 | multiple....dots
  |         ^^^ Syntax Error: Simple statements must be separated by newlines or semicolons
3 | multiple.....dots
  |


  |
1 | extra..dot
2 | multiple....dots
3 | multiple.....dots
  |         ^^^ Syntax Error: Simple statements must be separated by newlines or semicolons
  |


  |
1 | extra..dot
2 | multiple....dots
3 | multiple.....dots
  |             ^ Syntax Error: Expected an identifier
  |
